-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.2.0-beta1
-
None
-
OS X 10.9
-
87b5db5562954a756317bc4678f201f11b28212f
- execute a git log in qt creator
- click on a sha --> diff viewer opens
- scroll down, such that first visible line is not the top of the diff
- right click in a chunk, select "revert chunk"
--> diff viewer jumps to top
This is pretty annoying when reverting a series of chunks
For Gerrit Dashboard: QTCREATORBUG-12650 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
89685,2 | Save / restore state in diff editor when reloading | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |