src/plugins/git/gitclient.cpp
@@ -211,6 +211,7 @@ void GitDiffHandler::postCollectShowDescription(const QString &id)
         return;
     }
 
+    m_controller->saveStateRequested();
     m_controller->clear(m_waitMessage);
     VcsBase::Command *command = new VcsBase::Command(gitPath(),
                                                      m_workingDirectory,
@@ -286,6 +287,7 @@ void GitDiffHandler::postCollectTextualDiffOutput(const QString &gitCommand, con
         return;
     }
 
+    m_controller->saveStateRequested();
     m_controller->clear(m_waitMessage);
     VcsBase::Command *command = new VcsBase::Command(gitPath(),
                                                      m_workingDirectory,
@@ -313,6 +315,7 @@ void GitDiffHandler::slotTextualDiffOutputReceived(const QString &contents)
             = DiffEditor::DiffUtils::readPatch(
                 contents, m_controller->isIgnoreWhitespace(), &ok);
     m_controller->setDiffFiles(fileDataList, m_workingDirectory);
+    m_controller->restoreStateRequested();
     deleteLater();
 }
 
